# ChangeLog for dev-perl/Set-IntSpan
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.17 2007/01/19 15:43:52 mcummings Exp $

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Set-IntSpan-1.07.ebuild, -Set-IntSpan-1.08.ebuild,
  Set-IntSpan-1.09.ebuild:
  Version bump, thanks seemant

  17 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Set-IntSpan-1.09.ebuild:
  marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Set-IntSpan-1.07.ebuild, Set-IntSpan-1.08.ebuild, Set-IntSpan-1.09.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  18 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  Set-IntSpan-1.09.ebuild:
  Stable on alpha.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Set-IntSpan-1.09.ebuild:
  Mark 1.09 stable on ia64

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Set-IntSpan-1.09.ebuild:
  Stable on hppa

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Set-IntSpan-1.09.ebuild:
  Marking sparc stable

*Set-IntSpan-1.09 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +Set-IntSpan-1.09.ebuild:
  Version bump upstream

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> Set-IntSpan-1.08.ebuild:
  Mark 1.08 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> Set-IntSpan-1.08.ebuild:
  add ~ia64

  30 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  Set-IntSpan-1.08.ebuild:
  Stable on alpha.

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  Set-IntSpan-1.07.ebuild, Set-IntSpan-1.08.ebuild:
  Cleaning for mirror

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*Set-IntSpan-1.08 (06 Jun 2004)

  06 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  Set-IntSpan-1.08.ebuild:
  new version on cpan

  26 May 2004; Bryan Østergaard <kloeri@gentoo.org> Set-IntSpan-1.07.ebuild: