@@ -1,26 +1,34 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST Set-IntSpan-1.08.tar.gz 14148 RMD160 5a87f3d83645cf06c3dbe6a0e6050df5c7301c8c SHA1 c8332bafae1c8b49302ae0fc264e2544bb697128 SHA256 aa66de066764628bc85c9213eaf1fa24337f233a591dc65498288135840b0b29
 DIST Set-IntSpan-1.09.tar.gz 17524 RMD160 cf71e78468e1791e2a21f887c0889697e671311b SHA1 441349016ed1c5d948a7ca901eaa1d790e8b2546 SHA256 7a8f95af361e4365afb69e903080c9a116f202f44ed19e463b971ba988976b0d
+EBUILD Set-IntSpan-1.08.ebuild 535 RMD160 c30b06e3491ae8918ee2644ae3d006e65ce4f4d3 SHA1 88a9aacf47eb591528c1f491245bc63f57c9bc13 SHA256 248e4349dd42a6cbae9bee3bd474ac9b1a7cf1df2fa1bf8f73af09cd94e234b6
+MD5 3782b6a5c29d2029031b0cff619a035b Set-IntSpan-1.08.ebuild 535
+RMD160 c30b06e3491ae8918ee2644ae3d006e65ce4f4d3 Set-IntSpan-1.08.ebuild 535
+SHA256 248e4349dd42a6cbae9bee3bd474ac9b1a7cf1df2fa1bf8f73af09cd94e234b6 Set-IntSpan-1.08.ebuild 535
 EBUILD Set-IntSpan-1.09.ebuild 527 RMD160 874389906721281ae665cec194027e3febf0e205 SHA1 7564472a064b00aca6fe915c4d93f271b7397115 SHA256 be6f578324f79f09b4603dd3eccaaa874e1ed76d95a15796e4c730d236386fac
 MD5 b67e2ea32356f2136b3784ca232a8bef Set-IntSpan-1.09.ebuild 527
 RMD160 874389906721281ae665cec194027e3febf0e205 Set-IntSpan-1.09.ebuild 527
 SHA256 be6f578324f79f09b4603dd3eccaaa874e1ed76d95a15796e4c730d236386fac Set-IntSpan-1.09.ebuild 527
-MISC ChangeLog 2108 RMD160 64cd99560d8c5e7823fa60f68cf9183c082836fa SHA1 4302df8b838d2967e4a0131ef5c2d8dfb69c710c SHA256 bf1922be3f86acfb38524200316a7218808eee62d344a6bbc14fb2875a58c0e7
-MD5 1cc29b13844b4e194cd2f3bfb12b1da8 ChangeLog 2108
-RMD160 64cd99560d8c5e7823fa60f68cf9183c082836fa ChangeLog 2108
-SHA256 bf1922be3f86acfb38524200316a7218808eee62d344a6bbc14fb2875a58c0e7 ChangeLog 2108
+MISC ChangeLog 2235 RMD160 dd643bf4972eecdf9ada5ab8ea3d5981844cd294 SHA1 5a1f73efd7ed66a04d7d6cc08c9160a7c8baf651 SHA256 82bc1f26702f0bbe5e3613aad6a4e98f8799ef086b40b456f1cda69f5d106e2c
+MD5 e0d285ffd576265ad476ee59b1dd31b6 ChangeLog 2235
+RMD160 dd643bf4972eecdf9ada5ab8ea3d5981844cd294 ChangeLog 2235
+SHA256 82bc1f26702f0bbe5e3613aad6a4e98f8799ef086b40b456f1cda69f5d106e2c ChangeLog 2235
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
 SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata.xml 305
+MD5 ae63449b5600a4342a060bf8f6309575 files/digest-Set-IntSpan-1.08 247
+RMD160 9181af20d3f4940faa9eb6123c2f89a1bacddaf0 files/digest-Set-IntSpan-1.08 247
+SHA256 81e9fafcee8cbaf2199f60e9a528cb3ce1004831aa5ed4dfaab7f67edb188ff7 files/digest-Set-IntSpan-1.08 247
 MD5 de4b363a58ac98dcea590ce8b83e5265 files/digest-Set-IntSpan-1.09 247
 RMD160 23c51872ed05668a8e59a2f7571941316c52f040 files/digest-Set-IntSpan-1.09 247
 SHA256 044321c967205d0b9d499c9a1f5998b37937f43d3acbbb9cea4498a079d3eb0b files/digest-Set-IntSpan-1.09 247
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFsOc+tG5z4I8BtQoRAodgAJ9GhPXwdNqIHClc/fp6O37WvocWlgCeP/UB
-q0xEYRzNpRhFPlxso6YoGp4=
-=J47+
+iD8DBQFFshGjtG5z4I8BtQoRAjUSAJwN93NEckTIxvoKTM4TD+MIle6DDgCfX5Rf
+gUATNNA6dTsoU9PeohxGCsc=
+=GmQM
 -----END PGP SIGNATURE-----
