@@ -1,0 +1,17 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Set-IntSpan/Attic/Set-IntSpan-1.08.ebuild,v 1.10 2007/01/20 12:57:01 mcummings Exp $
+
+inherit perl-module
+
+DESCRIPTION="Manages sets of integers"
+SRC_URI="mirror://cpan/authors/id/S/SW/SWMCD/${P}.tar.gz"
+HOMEPAGE="http://search.cpan.org/~swmcd/"
+IUSE=""
+SLOT="0"
+LICENSE="|| ( Artistic GPL-2 )"
+KEYWORDS="alpha ~amd64 ~hppa ia64 ~ppc sparc x86"
+SRC_TEST="do"
+
+
+DEPEND="dev-lang/perl"
