@@ -1,0 +1,3 @@
+MD5 9d44f23bd2e4f3852e53f703f73fc699 Set-IntSpan-1.08.tar.gz 14148
+RMD160 5a87f3d83645cf06c3dbe6a0e6050df5c7301c8c Set-IntSpan-1.08.tar.gz 14148
+SHA256 aa66de066764628bc85c9213eaf1fa24337f233a591dc65498288135840b0b29 Set-IntSpan-1.08.tar.gz 14148
