@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Set-IntSpan
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.17 2007/01/19 15:43:52 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.18 2007/01/20 12:57:01 mcummings Exp $
+
+  20 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  +Set-IntSpan-1.08.ebuild:
+  Re-instating Set-IntSpan-1.08 from attic
 
   19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   -Set-IntSpan-1.07.ebuild, -Set-IntSpan-1.08.ebuild,
